This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

01-Oct-2001 (Lars Duening)  (3.3.105)
    - (prolang.y) The check for redefinition of 'nomask' functions no longer
        worked (reported by Gimli).

30-Sep-2001 (Lars Duening)  (3.3.104)
    - (lex.c) Added a warning about empty #pragmas (reported by Slava).
    - (interpret.c) Tracing no longer crashes when the command_giver
        turns non-interactive (reported by Dafire).

28-Sep-2001 (Lars Duening)  (3.3.103)
    - (lex.c) Spaces before the lineend caused the lexer to complain about
        an unrecognized pragma, even though the pragma had been recognized
        (reported by Dafire and Slava).
    - (efuns.c) Efun terminal_colour(): The escape sequence '%%^^' is
        now recognized and replaced by '%^' as is '%^%^' already. This is
        for compatibility with MudOS drivers (suggested by Fiona).
    - (telnet.h, comm.c) Added support for mudlib negotiation of MCP, MSP
        and MXP through the normal H_TELNET_NEG hook (suggested by Markus
        Peter).
    - (interpret.c, lex.c, smalloc.c) Made it work on Linux s/390 (a machine
        where char's are by default unsigned) (provided by Freaky).

27-Sep-2001 (Lars Duening)  (3.3.102)
    - (lex.c) Pragma recognition no longer stumbles over CRs at the line
        end (reported by Freaky and Slava).
    - (interpret.c) The idiom of assigning to a range [i..i-1] in order to
        insert elements is legal again - a lot of mudlibs already use it
        (reported by Andre).

26-Sep-2001 (Lars Duening)  (3.3.101)
    - (interpret.c) Assignments to negative length ranges (eg. [3..2]) are
        caught and throw an error (reported by Gimli).
    - (gcollect.c) Printing memory information during a GC is more robust
        against string NULL pointers (reported by Freaky).
    - (lex.c) It is possible to specify multiple pragmas in one #pragma