@@ -989,6 +989,39 @@ add_to_mem_block (int n, void *data, size_t size)
 
 /*-------------------------------------------------------------------------*/
 static char *
+get_visibility (fulltype_t type)
+
+/* Return (in a static buffer) a textual representation of the visibility
+ * portion of <type>.
+ */
+
+{
+    static char buff[100];
+    size_t len;
+
+    buff[0] = '\0';
+    if (type & TYPE_MOD_STATIC)
+        strcat(buff, "static ");
+    if (type & TYPE_MOD_NO_MASK)
+        strcat(buff, "nomask ");
+    if (type & TYPE_MOD_PRIVATE)
+        strcat(buff, "private ");
+    if (type & TYPE_MOD_PROTECTED)
+        strcat(buff, "protected ");
+    if (type & TYPE_MOD_PUBLIC)
+        strcat(buff, "public ");
+    if (type & TYPE_MOD_VARARGS)
+        strcat(buff, "varargs ");
+
+    len = strlen(buff);
+    if (len)
+        buff[len-1] = '\0';
+
+    return buff;
+} /* get_visibility() */
+
+/*-------------------------------------------------------------------------*/
+static char *
 get_type_name (fulltype_t type)
 
 /* Return (in a static buffer) a textual representation of <type>.
@@ -1896,7 +1929,9 @@ define_new_function ( Bool complete, ident_t *p, int num_arg, int num_local
 
         if ((funp->flags & (NAME_INHERITED|TYPE_MOD_PRIVATE))
          == (NAME_INHERITED|TYPE_MOD_PRIVATE))
+        {
             break;
+        }
 
         /* The function was already defined. It may be one of several reasons:
          *
@@ -1969,6 +2004,25 @@ define_new_function ( Bool complete, ident_t *p, int num_arg, int num_local
                         compare_args = MY_TRUE;
                     }
                 } /* cases (number of arguments) */
+
+                /* If it's a prototype->function redefinition, check if the
+                 * visibility is conserved.
+                 */
+#               define TYPE_MOD_VIS \
+                       (TYPE_MOD_STATIC | TYPE_MOD_NO_MASK \
+                       | TYPE_MOD_PRIVATE | TYPE_MOD_PUBLIC \
+                       | TYPE_MOD_PROTECTED)
+                if (!(funp->flags & NAME_TYPES_LOST)
+                 && ((funp->flags ^ flags) & TYPE_MOD_VIS)
+                   )
+                {
+                    char buff[100];
+
+                    strcpy(buff, get_visibility(funp->flags));
+                    yywarnf("Redefinition changes visibility from '%s' to '%s'."
+                           , buff, get_visibility(flags));
+                }
+#               undef TYPE_MOD_VIS
 
                 /* Check if the 'varargs' attribute is conserved */
 
@@ -3144,18 +3198,22 @@ def:  type optional_star L_IDENTIFIER  /* Function definition or prototype */
           if ( (start = $9) < 0)
           {
               /* function_body was a ';' -> prototype
-               * Just norm the visibility flags.
+               * Just norm the visibility flags unless it is a prototype
+               * for an already inherited function.
                */
 
               funflag_t *flagp;
 
               flagp = (funflag_t *)(&FUNCTION($3->u.global.function)->flags);
-              *flagp |= $1 & (*flagp & TYPE_MOD_PUBLIC
-                              ? (TYPE_MOD_NO_MASK)
-                              : (TYPE_MOD_NO_MASK|TYPE_MOD_PRIVATE
-                                |TYPE_MOD_STATIC|TYPE_MOD_PROTECTED
-                                |TYPE_MOD_PUBLIC)
-                              );
+              if (!(*flagp & NAME_INHERITED))
+              {
+                  *flagp |= $1 & (*flagp & TYPE_MOD_PUBLIC
+                                  ? (TYPE_MOD_NO_MASK)
+                                  : (TYPE_MOD_NO_MASK|TYPE_MOD_PRIVATE
+                                    |TYPE_MOD_STATIC|TYPE_MOD_PROTECTED
+                                    |TYPE_MOD_PUBLIC)
+                                  );
+              }
           }
           else
           {
